# fastapi-sqlite-demo

./: AGENTS.md  Justfile  LICENSE.txt  Prompt.md  Prompt.zh.md  README.md  index.http  pyproject.toml  pytest.ini
app/: dependencies.py  main.py
app/domain/: models.py
app/domain/infra/: db.py
app/domain/repository/: hero_repo.py
app/domain/repository/tests/: conftest.py  test_hero_repo.py
app/routers/: heros.py
tests/: test_sqlmodel.py
